// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OakInlineBanner matches snapshot for banner with title 1`] = `
.c0:where(span) {
  display: block;
}

.c0:where(*) {
  padding: 1rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2:where(span) {
  display: block;
}

.c2:where(*) {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4:where(span) {
  display: block;
}

.c4:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5:where(span) {
  display: block;
}

.c5:where(*) {
  position: relative;
  width: 2rem;
  min-width: 2rem;
  height: 2rem;
  min-height: 2rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8:where(span) {
  display: block;
}

.c8:where(*) {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c14:where(span) {
  display: block;
}

.c14:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16:where(span) {
  display: block;
}

.c16:where(*) {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17:where(span) {
  display: block;
}

.c17:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c19:where(span) {
  display: block;
}

.c19:where(*) {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22:where(span) {
  display: block;
}

.c22:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c23:where(span) {
  display: block;
}

.c23:where(*) {
  margin-top: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c26 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  gap: 0.25rem;
}

.c21 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c18 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c25 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c11 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c11:disabled {
  pointer-events: none;
  cursor: default;
}

.c12 {
  display: inline-block;
  position: relative;
}

.c12:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c12:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c12:active {
  color: transparent;
}

.c12:disabled {
  color: transparent;
}

.c10 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c10 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c10 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c10 > :first-child:disabled .icon-container {
  background: transparent;
}

.c10 > :first-child:hover .icon-container {
  background: #222222;
}

.c10 > :first-child:active .icon-container {
  background: transparent;
}

.c24 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c24:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c24:visited {
  color: #575757;
}

.c24:active {
  color: #222222;
}

.c24[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c24:hover,
  .c24:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <span
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt=""
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </span>
    </div>
    <div
      className="c4 c7"
    >
      <div
        className="c8 c9 c10"
      >
        <button
          aria-label="Dismiss banner"
          className="c11 c12"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c13"
          >
            <div
              className="c14 c15 icon-container"
            >
              <div
                className="c16 shadow"
              />
              <span
                className="c17"
                data-icon-for="button"
              >
                <img
                  alt=""
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </span>
            </div>
            <span
              className="c18"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="c19 c20"
    >
      <h1
        className="c21"
        data-testid="inline-banner-title"
      >
        Information
      </h1>
      <div
        className="c22"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c23 c9"
      >
        <a
          className="c24"
        >
          <span
            className="c25"
          >
            Link
          </span>
          <span
            className="c17 "
          >
            <img
              alt=""
              className="c26"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`OakInlineBanner matches snapshot for large variant banner 1`] = `
.c0:where(span) {
  display: block;
}

.c0:where(*) {
  padding: 1.5rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2:where(span) {
  display: block;
}

.c2:where(*) {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4:where(span) {
  display: block;
}

.c4:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5:where(span) {
  display: block;
}

.c5:where(*) {
  position: relative;
  width: 2.5rem;
  min-width: 2.5rem;
  height: 2.5rem;
  min-height: 2.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7:where(span) {
  display: block;
}

.c7:where(*) {
  position: absolute;
  top: 0rem;
  right: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9:where(span) {
  display: block;
}

.c9:where(*) {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c15:where(span) {
  display: block;
}

.c15:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17:where(span) {
  display: block;
}

.c17:where(*) {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c18:where(span) {
  display: block;
}

.c18:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c20:where(span) {
  display: block;
}

.c20:where(*) {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23:where(span) {
  display: block;
}

.c23:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c24:where(span) {
  display: block;
}

.c24:where(*) {
  margin-top: 0.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c27 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  gap: 1rem;
}

.c22 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c19 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c26 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c12:disabled {
  pointer-events: none;
  cursor: default;
}

.c13 {
  display: inline-block;
  position: relative;
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c13:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c13:active {
  color: transparent;
}

.c13:disabled {
  color: transparent;
}

.c11 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c11 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c11 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c11 > :first-child:disabled .icon-container {
  background: transparent;
}

.c11 > :first-child:hover .icon-container {
  background: #222222;
}

.c11 > :first-child:active .icon-container {
  background: transparent;
}

.c25 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c25:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c25:visited {
  color: #575757;
}

.c25:active {
  color: #222222;
}

.c25[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c25:hover,
  .c25:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <span
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt=""
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </span>
    </div>
    <div
      className="c7 c8"
    >
      <div
        className="c9 c10 c11"
      >
        <button
          aria-label="Dismiss banner"
          className="c12 c13"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c14"
          >
            <div
              className="c15 c16 icon-container"
            >
              <div
                className="c17 shadow"
              />
              <span
                className="c18"
                data-icon-for="button"
              >
                <img
                  alt=""
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </span>
            </div>
            <span
              className="c19"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="c20 c21"
    >
      <h1
        className="c22"
        data-testid="inline-banner-title"
      >
        Information
      </h1>
      <div
        className="c23"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c24 c10"
      >
        <a
          className="c25"
        >
          <span
            className="c26"
          >
            Link
          </span>
          <span
            className="c18 "
          >
            <img
              alt=""
              className="c27"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`OakInlineBanner matches snapshot for simple banner without title 1`] = `
.c0:where(span) {
  display: block;
}

.c0:where(*) {
  padding: 1rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2:where(span) {
  display: block;
}

.c2:where(*) {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4:where(span) {
  display: block;
}

.c4:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5:where(span) {
  display: block;
}

.c5:where(*) {
  position: relative;
  width: 2rem;
  min-width: 2rem;
  height: 2rem;
  min-height: 2rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8:where(span) {
  display: block;
}

.c8:where(*) {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c14:where(span) {
  display: block;
}

.c14:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16:where(span) {
  display: block;
}

.c16:where(*) {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17:where(span) {
  display: block;
}

.c17:where(*) {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c19:where(span) {
  display: block;
}

.c19:where(*) {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c21:where(span) {
  display: block;
}

.c21:where(*) {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c24 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  gap: 0.25rem;
}

.c18 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c23 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c11 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c11:disabled {
  pointer-events: none;
  cursor: default;
}

.c12 {
  display: inline-block;
  position: relative;
}

.c12:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c12:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c12:active {
  color: transparent;
}

.c12:disabled {
  color: transparent;
}

.c10 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c10 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c10 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c10 > :first-child:disabled .icon-container {
  background: transparent;
}

.c10 > :first-child:hover .icon-container {
  background: #222222;
}

.c10 > :first-child:active .icon-container {
  background: transparent;
}

.c22 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c22:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c22:visited {
  color: #575757;
}

.c22:active {
  color: #222222;
}

.c22[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c22:hover,
  .c22:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <span
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt=""
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </span>
    </div>
    <div
      className="c4 c7"
    >
      <div
        className="c8 c9 c10"
      >
        <button
          aria-label="Dismiss banner"
          className="c11 c12"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c13"
          >
            <div
              className="c14 c15 icon-container"
            >
              <div
                className="c16 shadow"
              />
              <span
                className="c17"
                data-icon-for="button"
              >
                <img
                  alt=""
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </span>
            </div>
            <span
              className="c18"
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="c19 c20"
    >
      <div
        className="c21"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c4 c9"
      >
        <a
          className="c22"
        >
          <span
            className="c23"
          >
            Link
          </span>
          <span
            className="c17 "
          >
            <img
              alt=""
              className="c24"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
